# chatgpt

./: .gitignore  LICENSE  Notes.md  Question_answering_using_embeddings.ipynb  app.py  chatgpt.code-workspace  docs.code-workspace  oldcode.py  pyproject.toml  requirements.txt
flagged/: log.csv
frontend/: index.html  letter.html  page.html  style.css
src/: api.py  chatbot.py  gpt.py  parameters.py  s3.py  testchat.py  testingepub.py  utils.py
