[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = "Preprocessing Data for ChatGPT"
authors = ["Eric Bellet"]
license = "MIT"
packages = [
    { include = "src" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
